--- a/config/database.yml
+++ b/config/database.yml
@@ -9,9 +9,17 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
+postgres: &postgres
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
 development:
-  <<: *default
-  database: db/development.sqlite3
+  <<: *postgres
+  host: localhost
+  database: <%= ENV.fetch("DATABASE_NAME") {rapidoo} %>
+  username: <%= ENV.fetch("DATABASE_USERNAME") {rapidoo} %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") {rapidoo} %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
